Initial commit with portfolio HTML and assets

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Nyasha Zimbudzana</title>
+    <link rel="stylesheet" href="bootstrap-5.3.6-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/first-section.css">
     <link rel="stylesheet" href="styles/second-section.css">
     <link rel="stylesheet" href="styles/third-section.css">
@@ -12,20 +13,21 @@
     <link rel="stylesheet" href="styles/sixth-section.css">
     <link rel="stylesheet" href="styles/seventh-section.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <div class="first-section">
-        <img class="image1" src="images/image1.jpg">
         <div class="position">
-            <div class="display">
-                <h1 class="heading1">Stylish Portfolio</h1> 
-                <p class="paragraph1">A Free Bootstrap theme by Start Bootstrap</p>
-                <button class="button1">Find Out More</button>
-            </div>
+            <img class="myimage" src="images/image1.jpg">
+        </div>
+        <div class="display">
+            <h1 class="heading1">Stylish Portfolio</h1> 
+            <p class="paragraph1">A Free Bootstrap theme by Start Bootstrap</p>
+            <button class="button1">Find Out More</button>
         </div>
         <div class="menu">
-            <img class="menu-icon" src="icons/menu.png">
-        </div>
+                <img class="menu-icon" src="icons/menu.png">
+            </div>
     </div>
 
     <div class="second-section">
@@ -33,42 +35,36 @@
         <p class="paragraph3">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at <em class="first-em">Unsplash!</em></p>
         <button class="button2">What we offer</button>
     </div>
-    
-    <div class="third-section-div">
-        <div class="third-section">
-        <div class="position2">
-            <div class="display2">
-                <p class="title">SERVICES</p>
-                <p class="sec-title">What We Offer</p>
-            </div>
-        </div>
-        <div class="position3">
-            <div class="display3">
-                <div class="my-div">
-                    <img class="icon" src="icons/iphone.png">
-                    <p class="titles">Responsive</p>
-                    <p class="last-line">Looks great on any screen size.</p>
-                </div>
-                <div class="my-div">
-                    <img class="icon" src="icons/pen.png">
-                    <p class="titles">Redesigned</p>
-                    <p class="last-line">Freshly designed for Bootstrap 4.</p>
-                </div>
-                <div class="my-div">
-                    <img class="icon" src="icons/like.png">
-                    <p class="titles">Favorited</p>
-                    <p class="last-line">Millions of users love start Bootstrap!</p>
-                </div>
-                <div class="my-div">
-                    <img class="icon" src="icons/mustache.png">
-                    <p class="titles">Questioned</p>
-                    <p class="last-line">I mustache you a Question...</p>
-                </div>  
-            </div>
-        </div>
-    </div>
-    </div>
 
+    <div class="third-section">
+        <div class="third-section-div">
+            <p class="title">SERVICES</p>
+            <p class="sec-title">What We Offer</p>
+        </div>
+        <div class="third-section-div2">
+            <div class="my-div">
+                <img class="icon" src="icons/iphone.png">
+                <p class="titles">Responsive</p>
+                <p class="last-line">Looks great on any screen size.</p>
+            </div>
+            <div class="my-div">
+                <img class="icon" src="icons/pen.png">
+                <p class="titles">Redesigned</p>
+                <p class="last-line">Freshly designed for Bootstrap 4.</p>
+            </div>
+            <div class="my-div">
+                <img class="icon" src="icons/like.png">
+                <p class="titles">Favorited</p>
+                <p class="last-line">Millions of users love start Bootstrap!</p>
+            </div>
+            <div class="my-div">
+                <img class="icon" src="icons/mustache.png">
+                <p class="titles">Questioned</p>
+                <p class="last-line">I mustache you a Question...</p>
+            </div>
+        </div>
+    </div>
+    
     <div class="fourth-section">
         <img class="image2" src="images/envelope.jpg">
         <div class="position-fourth">
@@ -85,29 +81,25 @@
             <P class="projects-p">Recent Projects</P>
         </div>
         <div class="project-div">
-            <div class="project">
-                <img class="project-image" src="images/many-envs.jpg">
+            <div class="project1">
                 <div class="project-info">
                     <p>STATIONERY</p>
                     <p>A yellow pencil with envelopes on a clean, blue backdrop!</p>
                 </div>
             </div>
-            <div class="project">
-                <img class="project-image" src="images/little-ice.jpg">
+            <div class="project2">
                 <div class="project-info">
                     <p>ICE CREAM</p>
                     <p>A dark blue background with a colored pencil, a clip and a tiny ice cream.</p>
                 </div>
             </div>
-            <div class="project">
-                <img class="project-image" src="images/strawberries.jpg">
+            <div class="project3">
                 <div class="project-info">
                     <p>STRAWBERRIES</p>
                     <p>Strawberries are such a tasty snack, especially with a little sugar on top.</p>
                 </div>
             </div>
-            <div class="project">
-                <img class="project-image" src="images/envelope.jpg">
+            <div class="project4">
                 <div class="project-info">
                     <p>WORKSPACE</p>
                     <p>A yellow workspace with some scissors, pencils and other objects.</p>
@@ -126,7 +118,7 @@
         </div>
     </div>
 
-    <div class="seventh-section">
+    <div>
         <img class="last-image" src="images/dzikwa-map.png">
     </div>
 
