--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Nyasha Zimbudzana</title>
+    <title>Stylish Portfolio</title>
     <link rel="stylesheet" href="bootstrap-5.3.6-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/first-section.css">
     <link rel="stylesheet" href="styles/second-section.css">
